compiler/tests/success/risc-v/intrinsic_and.jazz
export
fn and(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;

    // Registers.
    x = #AND(arg0, arg1);
    [x] = x;

    // Immediates.
    x = #ANDI(arg0, 1);
    [x] = x;
    x = #ANDI(arg0, -1);
    x = #ANDI(x, -2048);
    x = #ANDI(x, 0);
    x = #ANDI(x, 2047);
    [x] = x;

    reg u32 res;
    res = x;
    return res;
}
