compiler/tests/fail/x86-64/unaligned-sse-aesdec.jazz
export fn aesdec(reg ptr u8[17] a) -> reg u128 {
  reg u128 z = a.[#unaligned:u128 0];
  z = #AESDEC(z, a.[#unaligned:u128 1]);
  return z;
}
